<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Idle Rush</string>
    
    <string name="image_description"></string>
    
    <string name="main_new_game">New Game</string>
    <string name="main_empty_list">No saved games</string>
    <string name="main_game_mode">Game mode:</string>
    
    <string name="game_row_remaining_time">Remaining time:</string>
    <string name="game_row_total_coins">Total coins:</string>
    
    <string name="game_building_line_cost">Cost:</string>
    <string name="game_building_line_total_production">Total:</string>
    <string name="game_building_line_production_unit">Unit:</string>

    <string-array name="game_modes">
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>

</resources>