<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/building_row" >

    <ImageButton
        android:id="@+id/building_5_icon"
        style="@style/building_icon"
        android:contentDescription="@string/image_description"
        android:src="@drawable/icon_building_5" />

    <TextView
        android:id="@+id/building_5_level"
        style="@style/building_level" />

    <TableLayout style="@style/building_row_info" >

        <TableRow style="@style/building_row_line" >

            <TextView
                style="@style/building_row_line_title"
                android:text="@string/game_building_line_cost" />

            <TextView
                android:id="@+id/building_5_cost"
                style="@style/building_row_line_value" />
        </TableRow>

        <TableRow style="@style/building_row_line" >

            <TextView
                style="@style/building_row_line_title"
                android:text="@string/game_building_line_total_production" />

            <TextView
                android:id="@+id/building_5_total_production"
                style="@style/building_row_line_value" />
        </TableRow>

        <TableRow style="@style/building_row_line" >

            <TextView
                style="@style/building_row_line_title"
                android:text="@string/game_building_line_production_unit" />

            <TextView
                android:id="@+id/building_5_production_unit"
                style="@style/building_row_line_value" />
        </TableRow>
    </TableLayout>

</TableRow>